kiali/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-route
  namespace: istio-system
spec:
  parentRefs:
    - name: istio-gateway
      namespace: mern-devops
  hostnames:
    - kiali.cndb.atkaridarshan.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: kiali
          port: 20001
